<resources>
    <string name="app_name">PKM Application</string>
    <string name="username">Username</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="input">Input</string>
    <string name="password">Password</string>
    <string name="belumdaftar">Belum Daftar?</string>
    <string name="save">Save</string>
    <string name="contohnoHp">ex : 08xxx</string>
    <string name="namaLengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="nomorhp">Nomor Hp</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="myprofile">Profile Saya</string>
    <string name="lapor">Pesan</string>
    <string name="information">Selamat Datang</string>
    <string name="riwayat">Riwayat Pesanan</string>
    <string name="pantauan">Pantauan</string>
    <string name="FAQ">FAQ</string>
    <string name="sabunCair">Sabun Cair</string>
    <string name="order">Order</string>
    <string name="jumlah0">0</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="parfum">Parfum</string>
    <string name="masker">Masker</string>
    <string name="benangputih">Benang Putih</string>
    <string name="jumlahPesanan">Jumlah Pesanan</string>
    <string name="item">Item</string>
    <string name="lanjut">Lanjut</string>
    <string name="harga">Harga</string>
    <string name="Rp">Rp</string>
    <string name="pembayaran">Pembayaran Langsung</string>
    <string name="pesanSekarang">Pesan Sekarang</string>
    <string name="bentukMaps">Where is my order...</string>
    <string name="komunikasi">Anda bisa melakukan komunikasi dengan...</string>
    <string name="chat">Chat</string>
    <string name="telephone">Telepon</string>
    <string name="tanggal">Tanggal</string>
    <string name="tgl">19/08/2020</string>
    <string name="jumlah">Jumlah</string>
    <string name="rinci">rinci</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="kirim">Kirim</string>
    <string name="pernyataan">Pernyataan</string>
    <string name="confirm">Confirm</string>
    <string name="out">Keluar</string>
    <string name="no">Tidak</string>
</resources>
