<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <pkm.andro.pkmapplication.customfonts.MMediumText
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/riwayat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <pkm.andro.pkmapplication.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/tanggal"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <pkm.andro.pkmapplication.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/tgl"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <pkm.andro.pkmapplication.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/jumlah"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <pkm.andro.pkmapplication.customfonts.MyTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/item"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />


                <EditText
                    android:layout_width="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_input"
                    android:hint="@string/jumlah0"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:paddingLeft="12dp"
                    android:textColorHint="#C7C7C7" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btnsave"
                    android:text="@string/rinci"
                    android:layout_marginRight="10dp"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>