<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <pkm.andro.pkmapplication.customfonts.MMediumText
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/FAQ"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:background="@drawable/bg_input"
                    android:paddingTop="8dp"
                    android:hint="@string/pertanyaan"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsave"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/kirim"
                    android:textSize="13sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:background="@drawable/bg_input"
                    android:paddingTop="8dp"
                    android:hint="@string/pernyataan"
                    android:layout_weight="1"
                    android:textSize="13sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsave"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/kirim"
                    android:textSize="13sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>